// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/Payloads Integration Tests (GET) /payloads with returned data 1`] = `
{
  "data": [
    {
      "patient_id": "1d0253c4-8fab-41df-a414-55d52e4c6c3f",
      "patient_name": "Jane Doe",
      "payload_id": "86c0f117-4021-412e-b163-0dc621df672a",
      "payload_received": "2022-08-17T12:21:10.203Z",
    },
    {
      "patient_id": "",
      "patient_name": "",
      "payload_id": "30a8e0c6-e6c4-458f-aa4d-b224b493d3c0",
      "payload_received": "2022-08-17T12:21:10.203Z",
    },
    {
      "patient_id": "fd1bebf4-d690-4fc5-a0d8-4fd4701ff4c9",
      "patient_name": "Steve Jobs",
      "payload_id": "c5c3636b-81dd-44a9-8c4b-71adec7d47b2",
      "payload_received": "2022-08-17T12:21:10.2Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 3,
}
`;

exports[`/Payloads Integration Tests (GET) /payloads with returned data 2`] = `
{
  "data": [
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "bb8891d4-0c02-41fe-9ec4-21516afa06e5",
      "payload_received": "2022-09-08T09:13:32.779Z",
    },
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "8382c110-a575-4e43-8319-e97dc8237c7b",
      "payload_received": "2022-09-08T09:10:03.334Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 2,
}
`;

exports[`/Payloads Integration Tests (GET) /payloads with returned data 3`] = `
{
  "data": [
    {
      "patient_id": "556342B",
      "patient_name": "Rubo DEMO",
      "payload_id": "3b790a6a-7876-4b01-8456-0a7f6a56bf7a",
      "payload_received": "2022-09-16T09:38:02.24Z",
    },
    {
      "patient_id": "RJN7270540X",
      "patient_name": "LIONHEART^WILLIAM",
      "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
      "payload_received": "2022-09-16T09:37:51.939Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 2,
}
`;

exports[`/Payloads Integration Tests (GET) /payloads with returned data 4`] = `
{
  "data": [
    {
      "patient_id": "LiverUS-01",
      "patient_name": "LiverUS-01",
      "payload_id": "5f9274b6-bbb1-4263-8745-2f29297a4d9a",
      "payload_received": "2022-09-16T09:39:29.762Z",
    },
    {
      "patient_id": "556342B",
      "patient_name": "Rubo DEMO",
      "payload_id": "3b790a6a-7876-4b01-8456-0a7f6a56bf7a",
      "payload_received": "2022-09-16T09:38:02.24Z",
    },
    {
      "patient_id": "RJN7270540X",
      "patient_name": "LIONHEART^WILLIAM",
      "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
      "payload_received": "2022-09-16T09:37:51.939Z",
    },
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "bb8891d4-0c02-41fe-9ec4-21516afa06e5",
      "payload_received": "2022-09-08T09:13:32.779Z",
    },
    {
      "patient_id": "TinyPatient02",
      "patient_name": "TinyPatient",
      "payload_id": "8382c110-a575-4e43-8319-e97dc8237c7b",
      "payload_received": "2022-09-08T09:10:03.334Z",
    },
  ],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 5,
}
`;

exports[`/Payloads Integration Tests (GET) /payloads without returned data 1`] = `
{
  "data": [],
  "firstPage": "//payload?pageNumber=1&pageSize=10",
  "lastPage": "//payload?pageNumber=1&pageSize=10",
  "nextPage": null,
  "pageNumber": 1,
  "pageSize": 10,
  "previousPage": null,
  "totalPages": 1,
  "totalRecords": 0,
}
`;

exports[`/Payloads Integration Tests (GET) /payloads/:payloadid/executions with invalid id 1`] = `
{
  "detail": "Failed to validate payloadId, not a valid guid",
  "instance": "/workflowinstances?payloadid=invalidID&disablePagination=true",
  "status": 400,
  "title": "Bad Request",
  "traceId": "00-7d36d37cd21021e68d552618bc5bfc3c-335958bf8d6d9ad0-00",
  "type": "https://tools.ietf.org/html/rfc7231#section-6.5.1",
}
`;

exports[`/Payloads Integration Tests (GET) /payloads/:payloadid/executions with returned data 1`] = `
[
  {
    "ae_title": "MonaiSCU",
    "id": "73909439-57da-465e-b529-2addd36cbcd9",
    "payload_id": "bb8891d4-0c02-41fe-9ec4-21516afa06e5",
    "start_time": "2022-09-08T09:14:09.89Z",
    "status": "Failed",
    "tasks": [
      {
        "execution_id": "fd89296e-29b7-4d54-be27-26e185db820c",
        "next_task": [],
        "payload_id": "bb8891d4-0c02-41fe-9ec4-21516afa06e5",
        "status": "Failed",
        "task_id": "export-task-connectathon",
        "task_start_time": "2022-09-08T09:14:09.89Z",
        "workflow_instance_id": "73909439-57da-465e-b529-2addd36cbcd9",
      },
    ],
    "workflow_id": "ba85e76a-f03e-4b54-b2ea-c7736afa8c13",
    "workflow_name": "workflow-name-1",
  },
]
`;

exports[`/Payloads Integration Tests (GET) /payloads/:payloadid/executions with returned data 2`] = `
[
  {
    "ae_title": "MONAI",
    "id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
    "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
    "start_time": "2022-09-22T12:45:13.102Z",
    "status": "Succeeded",
    "tasks": [
      {
        "execution_id": "3b9d94b9-4285-45d4-bea9-491fa62b8f91",
        "next_task": [
          {
            "execution_id": "47d73804-ea9b-4aaf-b375-bd19ae8feaae",
            "next_task": [],
            "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
            "status": "Succeeded",
            "task_id": "export-report",
            "task_start_time": "2022-09-22T12:45:59.689Z",
            "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
          },
        ],
        "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
        "status": "Succeeded",
        "task_id": "mean-pixel-calc",
        "task_start_time": "2022-09-22T12:45:13.102Z",
        "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
      },
    ],
    "workflow_id": "0c262733-05a1-4811-9d9a-b5cadb5a475a",
    "workflow_name": "workflow-name-2",
  },
]
`;

exports[`/Payloads Integration Tests (GET) /payloads/:payloadid/executions with returned data 3`] = `
[
  {
    "ae_title": "MonaiSCU",
    "id": "e26bec36-9a22-4be2-8402-379cb96c22e5",
    "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
    "start_time": "2022-09-16T09:37:59.634Z",
    "status": "Created",
    "tasks": [
      {
        "execution_id": "1f3d4b42-8a8f-41b1-9cc7-bfb19d9716de",
        "next_task": [],
        "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
        "status": "Failed",
        "task_id": "export-task-connectathon",
        "task_start_time": "2022-09-16T09:37:59.634Z",
        "workflow_instance_id": "e26bec36-9a22-4be2-8402-379cb96c22e5",
      },
    ],
    "workflow_id": "ba85e76a-f03e-4b54-b2ea-c7736afa8c13",
    "workflow_name": "workflow-name-3",
  },
]
`;

exports[`/Payloads Integration Tests (GET) /payloads/:payloadid/executions with returned data 4`] = `
[
  {
    "ae_title": "MonaiSCU",
    "id": "e26bec36-9a22-4be2-8402-379cb96c22e5",
    "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
    "start_time": "2022-09-16T09:37:59.634Z",
    "status": "Created",
    "tasks": [
      {
        "execution_id": "1f3d4b42-8a8f-41b1-9cc7-bfb19d9716de",
        "next_task": [],
        "payload_id": "5f624ab5-88f2-4f47-b239-f05851a94c31",
        "status": "Failed",
        "task_id": "export-task-connectathon",
        "task_start_time": "2022-09-16T09:37:59.634Z",
        "workflow_instance_id": "e26bec36-9a22-4be2-8402-379cb96c22e5",
      },
    ],
    "workflow_id": "ba85e76a-f03e-4b54-b2ea-c7736afa8c13",
    "workflow_name": "workflow-name-4a",
  },
  {
    "ae_title": "MonaiSCU",
    "id": "a54a30a9-516b-4906-9315-e7dc23af4539",
    "payload_id": "e3a91e70-ade6-40b8-96f4-a9f8151919ac",
    "start_time": "2022-09-16T09:38:560.634Z",
    "status": "Succeeded",
    "tasks": [
      {
        "execution_id": "8a070831-53a3-4dfe-b568-a3edbf62282f",
        "next_task": [],
        "payload_id": "e3a91e70-ade6-40b8-96f4-a9f8151919ac",
        "status": "Failed",
        "task_id": "export-task-connectathon",
        "task_start_time": "2022-09-16T09:37:59.634Z",
        "workflow_instance_id": "a54a30a9-516b-4906-9315-e7dc23af4539",
      },
    ],
    "workflow_id": "739e4f70-a6c0-4e98-8e47-469f7b8b9606",
    "workflow_name": "workflow-name-4b",
  },
]
`;

exports[`/Payloads Integration Tests (GET) /payloads/:payloadid/executions with returned data 5`] = `
[
  {
    "ae_title": "MONAI",
    "id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
    "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
    "start_time": "2022-09-22T12:45:13.102Z",
    "status": "Succeeded",
    "tasks": [
      {
        "execution_id": "3b9d94b9-4285-45d4-bea9-491fa62b8f91",
        "next_task": [
          {
            "execution_id": "47d73804-ea9b-4aaf-b375-bd19ae8feaae",
            "next_task": [],
            "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
            "status": "Succeeded",
            "task_id": "export-report",
            "task_start_time": "2022-09-22T12:45:59.689Z",
            "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
          },
          {
            "execution_id": "47d73804-ea9b-4aaf-b375-bd19ae8feaae",
            "next_task": [],
            "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
            "status": "Succeeded",
            "task_id": "export-report",
            "task_start_time": "2022-09-22T12:45:59.689Z",
            "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
          },
        ],
        "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
        "status": "Succeeded",
        "task_id": "mean-pixel-calc",
        "task_start_time": "2022-09-22T12:45:13.102Z",
        "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
      },
      {
        "execution_id": "3b9d94b9-4285-45d4-bea9-491fa62b8f91",
        "next_task": [
          {
            "execution_id": "47d73804-ea9b-4aaf-b375-bd19ae8feaae",
            "next_task": [],
            "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
            "status": "Succeeded",
            "task_id": "export-report",
            "task_start_time": "2022-09-22T12:45:59.689Z",
            "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
          },
        ],
        "payload_id": "d801bd68-381d-4ff3-95a8-85c46380e075",
        "status": "Succeeded",
        "task_id": "mean-pixel-calc2",
        "task_start_time": "2022-09-22T12:45:13.102Z",
        "workflow_instance_id": "a67a7af7-068b-44b8-a81b-def7b3e5403b",
      },
    ],
    "workflow_id": "0c262733-05a1-4811-9d9a-b5cadb5a475a",
    "workflow_name": "workflow-name-5",
  },
]
`;
